--- a/bot/upgrade/style.css
+++ b/bot/upgrade/style.css
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 28px;
+  gap: 10px;
   position: relative;
   align-self: stretch;
   width: 100%;
